@@ -5,6 +5,9 @@ Release 5.0.10 (unreleased)
 Bug fixes
 ---------
 
+- Work around possible Intel icc compiler bug in least-squares vector
+  gradient (observed on v6.0 with icc 18.0.1 20171018).
+
 - Avoid opening residuals.csv from all ranks.
 
 - Fix for time moment which start is defined by a time value equal or close to
